# savannah_informatics_back_end_challenge

./: README.md  pyproject.toml  test.py
api/: .env  manage.py  requirements.txt  utils.py
api/api/: README.md  settings.py  urls.py  utils.py  vercel.json  views.py  wsgi.py
api/helpers/: README.md  helpers.py
api/models/: README.md  africastalking_model.py  install_postgresql  savannah_info_db.sql  supabase_model.py
api/tests/: README.md  test_africastalking_model.py  test_helpers.py  test_supabase_model.py
supabase/: SupabaseModel.py  flush_database  savannah_info_db.sql
